<resources>
    <string name="app_name">SplitEase+</string>
    <string name="intro1">Splitting bills with friends and family has never been easier </string>
    <string name="intro2">Quickest way to split bill in just few clicks</string>
    <string name="button_started">Get Started</string>
    <string name="equal">Equal</string>
    <string name="custom">Custom</string>
    <string name="equal_person">Each person pays</string>
    <string name="equal_placeholder">RM 00.00</string>
    <string name="split_bill">Split Bill</string>
    <string name="recipient">Recipient</string>
    <string name="person">Person</string>
    <string name="amount">Amount</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="RM">RM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>