<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".EqualFragment">

    <TextView
        android:id="@+id/tv_equalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_grey"
        android:paddingStart = "10dp"
        android:paddingEnd = "10dp"
        android:paddingTop = "10dp"
        android:textSize="20sp"
        android:text="@string/equal_person" />

    <TextView
        android:id="@+id/tv_equalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:paddingStart = "10dp"
        android:textSize="70sp"
        android:text="@string/equal_placeholder"
        android:paddingEnd = "10dp"
        android:paddingBottom = "55dp"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom = "20dp"
        android:orientation = "vertical"
        android:background = "@drawable/relativelayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_recipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/recipient"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/tv_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/person"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="#18191A"
                    app:cornerRadius="10dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edit_1"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="#18191A"
                    app:cornerRadius="10dp"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/amount"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_RM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RM"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="00.00"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/split_bill"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom = "true"
            android:background="@drawable/rounded_button"
            android:text="@string/split_bill"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint = "@null"/>

    </RelativeLayout>

</LinearLayout>